--- a/src/ZectranetBundle/Resources/views/layout.html.twig
+++ b/src/ZectranetBundle/Resources/views/layout.html.twig
@@ -10,8 +10,6 @@
 	<title>{% block title %}Layout page{% endblock %}</title>
 
     {% block AngularJS %}
-        <script src="{{ asset('bundles/zectranet/js/jquery-2.1.3.min.js') }}" type="text/javascript"></script>
-        <script src="{{ asset('bundles/zectranet/js/underscore-min.js') }}" type="text/javascript"></script>
         <script src="{{ asset('bundles/zectranet/js/AngularJS/angular.js') }}" type="text/javascript"></script>
     {% endblock %}
 
@@ -182,7 +180,7 @@
                                         </div>
                                     </div>
                                 </div>
-
+                            </div>
 
                 </div>
 
@@ -712,6 +710,9 @@
 
 
 {% block javascripts %}
+
+	<script src="{{ asset('bundles/zectranet/js/jquery-2.1.3.min.js') }}" type="text/javascript"></script>
+	<script src="{{ asset('bundles/zectranet/js/underscore-min.js') }}" type="text/javascript"></script>
 	<script src="{{ asset('bundles/zectranet/js/Bootstrap/bootstrap.min.js') }}" type="text/javascript"></script>
 
 	<script src="{{ asset('bundles/zectranet/js/AngularJS/angular-route.min.js') }}" type="text/javascript"></script>
