--- a/src/ZectranetBundle/Resources/views/layout.html.twig
+++ b/src/ZectranetBundle/Resources/views/layout.html.twig
@@ -730,7 +730,14 @@
 	<script src="{{ asset('bundles/zectranet/js/Bootstrap/bootstrap_ench_dropdowns.js') }}"></script>
 
 	<script src="{{ asset('bundles/zectranet/js/custom/angular-core.js') }}" type="text/javascript"></script>
-	<script src="{{ asset('bundles/zectranet/js/custom/navigation.js') }}" type="text/javascript"></script>
+
+    <script src="{{ asset('bundles/zectranet/js/custom/Data/data.js') }}" type="text/javascript"></script>
+	<script src="{{ asset('bundles/zectranet/js/custom/Data/Services/data.tasks.service.js') }}" type="text/javascript"></script>
+
+    <script src="{{ asset('bundles/zectranet/js/custom/Project/project.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('bundles/zectranet/js/custom/Project/Controllers/project.singleTask.controller.js') }}" type="text/javascript"></script>
+
+    <script src="{{ asset('bundles/zectranet/js/custom/navigation.js') }}" type="text/javascript"></script>
 	<script src="{{ asset('bundles/zectranet/js/lightbox.min.js') }}"></script>
 	<script src="{{ asset('bundles/zectranet/js/moment.min.js') }}"></script>
     <script src="{{ asset('bundles/zectranet/js/text-redactor.js') }}"></script>
@@ -765,6 +772,20 @@
             approveQnAMembershipRequest: "{{ path('zectranet_approve_QNA_membership_request', { 'request_id': 'request_id' }) }}",
             approveProjectMembershipRequest: "{{ path('zectranet_approve_project_membership_request', { 'request_id': 'request_id' }) }}",
 		};
+
+        // Tasks URLS \\
+        JSON_URLS.addTask = "{{ path('zectranet_project_add_task', { 'project_id': 0 }) }}";
+        JSON_URLS.addSubTask = "{{ path('zectranet_project_add_subtask', { 'project_id': 0 }) }}";
+        JSON_URLS.getTasks = "{{ path('zectranet_project_get_tasks', { 'project_id': 0 }) }}";
+        JSON_URLS.getSingleTask = "{{ path('zectranent_task_get_single', { 'task_id': 0 }) }}";
+        JSON_URLS.deleteTask = "{{ path('zectranet_task_delete', { 'task_id': 0 }) }}";
+        JSON_URLS.showTask = "{{ path('zectranet_task_show', { 'task_id': 0 }) }}";
+        JSON_URLS.saveTaskInfo = "{{ path('zectranet_task_edit_info', { 'task_id': 0 }) }}";
+        JSON_URLS.changeStatusTask = "{{ path('zectranet_change_task_status', {'task_id': 0}) }}";
+        JSON_URLS.showSprint = "{{ path('zectranet_show_sprint', { 'office_id': 0, 'sprint_id': 1 }) }}";
+        JSON_URLS.sprintAddTasks = "{{ path('zectranet_sprint_add_tasks', { 'sprint_id': 0 }) }}";
+        JSON_URLS.sprintDetachTask = "{{ path('zectranet_detach_task_from_sprint', { 'task_id': 0 }) }}";
+        JSON_URLS.getSprintTasks = "{{ path('zectranet_sprint_get_tasks', { 'sprint_id': 0 }) }}";
 
         var TEMPPARAMS = {};
         {% if app.user %}
