--- a/src/ZectranetBundle/Resources/views/sprint.html.twig
+++ b/src/ZectranetBundle/Resources/views/sprint.html.twig
@@ -147,11 +147,10 @@
 {% block javascripts %}
     {{ parent() }}
     <script>
-        JSON_URLS.getTasks = "{{ path('zectranet_sprint_get_tasks', { 'sprint_id': sprint.id }) }}";
-        JSON_URLS.showTask = "{{ path('zectranet_task_show', { 'task_id': 0 }) }}";
+        TEMPPARAMS.sprintID = {{ sprint.id }};
     </script>
 
-    <script src="{{ asset('bundles/zectranet/js/custom/sprintController.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('bundles/zectranet/js/custom/Project/Controllers/project.sprint.controller.js') }}" type="text/javascript"></script>
     <script>
         $(function () {
             $('[data-toggle="tooltip"]').tooltip()
