--- a/src/ZectranetBundle/Resources/views/layout.html.twig
+++ b/src/ZectranetBundle/Resources/views/layout.html.twig
@@ -10,6 +10,8 @@
 	<title>{% block title %}Layout page{% endblock %}</title>
 
     {% block AngularJS %}
+        <script src="{{ asset('bundles/zectranet/js/jquery-2.1.3.min.js') }}" type="text/javascript"></script>
+        <script src="{{ asset('bundles/zectranet/js/underscore-min.js') }}" type="text/javascript"></script>
         <script src="{{ asset('bundles/zectranet/js/AngularJS/angular.js') }}" type="text/javascript"></script>
     {% endblock %}
 
@@ -712,9 +714,6 @@
 
 
 {% block javascripts %}
-
-	<script src="{{ asset('bundles/zectranet/js/jquery-2.1.3.min.js') }}" type="text/javascript"></script>
-	<script src="{{ asset('bundles/zectranet/js/underscore-min.js') }}" type="text/javascript"></script>
 	<script src="{{ asset('bundles/zectranet/js/Bootstrap/bootstrap.min.js') }}" type="text/javascript"></script>
 
 	<script src="{{ asset('bundles/zectranet/js/AngularJS/angular-route.min.js') }}" type="text/javascript"></script>
@@ -729,15 +728,21 @@
 	<script src="{{ asset('bundles/zectranet/js/metisMenu.js') }}" type="text/javascript"></script>
 	<script src="{{ asset('bundles/zectranet/js/sb-admin-2.js') }}" type="text/javascript"></script>
 	<script src="{{ asset('bundles/zectranet/js/highlight.js') }}" type="text/javascript"></script>
-	<script src="{{ asset('bundles/zectranet/js/Bootstrap/bootstrap_ench_dropdowns.js') }}"></script>
 
+    <!------------------------------- CORE MODULE ------------------------------->
 	<script src="{{ asset('bundles/zectranet/js/custom/angular-core.js') }}" type="text/javascript"></script>
 
+    <!------------------------------- DATA MODULE ------------------------------->
     <script src="{{ asset('bundles/zectranet/js/custom/Data/data.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('bundles/zectranet/js/custom/Data/Entities/data.tasks.table.js') }}" type="text/javascript"></script>
 	<script src="{{ asset('bundles/zectranet/js/custom/Data/Services/data.tasks.service.js') }}" type="text/javascript"></script>
+	<script src="{{ asset('bundles/zectranet/js/custom/Data/Services/data.tasksSort.service.js') }}" type="text/javascript"></script>
+	<script src="{{ asset('bundles/zectranet/js/custom/Data/Services/data.tasksFilter.service.js') }}" type="text/javascript"></script>
 
+    <!------------------------------ PROJECT MODULE ----------------------------->
     <script src="{{ asset('bundles/zectranet/js/custom/Project/project.js') }}" type="text/javascript"></script>
     <script src="{{ asset('bundles/zectranet/js/custom/Project/Controllers/project.singleTask.controller.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('bundles/zectranet/js/custom/Project/Controllers/project.sprint.controller.js') }}" type="text/javascript"></script>
 
     <script src="{{ asset('bundles/zectranet/js/custom/navigation.js') }}" type="text/javascript"></script>
 	<script src="{{ asset('bundles/zectranet/js/lightbox.min.js') }}"></script>
@@ -839,11 +844,6 @@
             var hours = new Date().getHours();
             $("#hours").html(( hours < 10 ? "0" : "" ) + hours);
         }, 1000);
-
-        $('.noclose').bind('click', function (event) {
-            event.stopPropagation();
-        });
-
     </script>
 
 {% endblock %}
